Archive2/76/fe354e56ab8fd1/output
main.cpp:12:39: error: 'typename std::enable_if<(! B)>::type foo<B>::bar()' cannot be overloaded
     typename std::enable_if<!B>::type bar()
                                       ^
main.cpp:7:38: error: with 'typename std::enable_if<B>::type foo<B>::bar()'
     typename std::enable_if<B>::type bar()
                                      ^
main.cpp: In function 'int main()':
main.cpp:20:15: warning: unused variable 'a' [-Wunused-variable]
     foo<true> a;
               ^
